--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,8 +10,9 @@
         "resolveJsonModule": true,
         "isolatedModules": true,
         "esModuleInterop": true,
-        "lib": ["esnext", "dom"]
+        "lib": ["esnext", "dom"],
+        "allowSyntheticDefaultImports": true
     },
-    "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
+    "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue", "electron/**/*.ts"],
     "references": [{ "path": "./tsconfig.node.json" }]
 }
