--- a/tsconfig.electron.json
+++ b/tsconfig.electron.json
@@ -7,7 +7,7 @@
         "strict": true,
         "sourceMap": false,
         "esModuleInterop": true,
-        "outDir": "./electronDist",
+        "outDir": "./electronCompiled",
     },
     "include": ["electron/**/*.ts"]
 }
