--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,6 @@
         "lib": ["esnext", "dom"],
         "allowSyntheticDefaultImports": true
     },
-    "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue", "electron/**/*.ts"],
+    "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
     "references": [{ "path": "./tsconfig.node.json" }]
 }
