--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     },
     "main": "electronCompiled/electron.js",
     "dependencies": {
+        "music-metadata": "^7.12.3",
+        "pinia": "^2.0.13",
         "vue": "^3.2.25"
     },
     "devDependencies": {
