--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     },
     "main": "electronCompiled/electron.js",
     "dependencies": {
+        "autoprefixer": "^10.4.7",
         "music-metadata": "^7.12.3",
         "pinia": "^2.0.13",
+        "postcss": "^8.4.13",
         "sqlite3": "^5.0.2",
+        "tailwindcss": "^3.0.24",
         "typeorm": "^0.3.6",
         "vue": "^3.2.25"
     },
