--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "cross-env": "^7.0.3",
         "electron": "^18.0.3",
         "electron-builder": "^22.14.13",
+        "sass": "^1.51.0",
         "typescript": "^4.5.4",
         "vite": "^2.9.0",
         "vue-tsc": "^0.29.8",
