--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
         "sqlite3": "^5.0.2",
         "tailwindcss": "^3.0.24",
         "typeorm": "^0.3.6",
-        "vue": "^3.2.25"
+        "vue": "^3.2.25",
+        "vue-router": "4"
     },
     "devDependencies": {
         "@types/node": "^17.0.23",
