--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "electron-window-state": "^5.0.3",
         "music-metadata": "^7.12.3",
         "pinia": "^2.0.13",
+        "pinia-plugin-persistedstate": "^1.6.1",
         "postcss": "^8.4.13",
         "sqlite3": "^5.0.2",
         "tailwindcss": "^3.0.24",
