--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
         "sqlite3": "^5.0.2",
         "tailwindcss": "^3.0.24",
         "typeorm": "^0.3.6",
-        "vue": "^3.2.25",
+        "vue": "3.2.37",
         "vue-router": "4"
     },
     "devDependencies": {
