fix build scripts

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "electron": "yarn build:typescript:electron && wait-on tcp:3000 && cross-env ENVIRONMENT=development electron .",
         "electron:dev": "concurrently -k \"cross-env BROWSER=none yarn dev\" \"yarn electron\"",
         "build:typescript:electron": "tsc --build tsconfig.electron.json",
-        "build:electron": "electron-builder",
+        "build:electron": "yarn build:typescript:electron && electron-builder -wl",
         "build:vue": "vue-tsc --noEmit && cross-env ENVIRONMENT=production vite build",
         "build:app": "yarn build:vue && yarn build:electron"
     },
