--- a/package.json
+++ b/package.json
@@ -45,14 +45,17 @@
         "appId": "de.blechlawine.musicplayer",
         "productName": "MusicPlayer",
         "mac": {
-            "category": "public.app-category.music"
+            "category": "public.app-category.music",
+            "icon": "icon.png"
         },
         "linux": {
-            "category": "Audio"
+            "category": "Audio",
+            "icon": "icon.png"
         },
         "nsis": {
             "oneClick": false,
-            "allowToChangeInstallationDirectory": true
+            "allowToChangeInstallationDirectory": true,
+            "icon": "icon.png"
         },
         "files": [
             "dist/**/*",
