add assets directory to build files

--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
         },
         "files": [
             "dist/**/*",
-            "electronCompiled/**/*"
+            "electronCompiled/**/*",
+            "assets/**/*"
         ],
         "directories": {
             "buildResources": "assets",
