--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "wait-on": "^6.0.1"
     },
     "author": "Blechlawine",
+    "license": "GPL-3.0",
     "build": {
         "appId": "de.blechlawine.musicplayer",
         "productName": "MusicPlayer",
