--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
         "sqlite3": "^5.0.2",
         "tailwindcss": "^3.0.24",
         "typeorm": "^0.3.10",
-        "vue": "3.2.41",
+        "vue": "^3.2.45",
         "vue-router": "4"
     },
     "devDependencies": {
+        "@babel/types": "^7.20.2",
         "@types/node": "^17.0.23",
         "@vitejs/plugin-vue": "^3.2.0",
         "concurrently": "^7.1.0",
